# learning

./: .gitignore  LICENSE  README.md
C_projects.d/Challenges and Puzzles/MIME TYPE/: CMakeLists.txt  _ext.txt  _fname.txt  _mt.txt  codingame.md  hashtable.c  hashtable.h  input_ext-MT.txt  input_fName.txt  main.c  main.h  testData.c  testdata.h
C_projects.d/c__from_edube/part_1/: c_p1__lab-character-type-and-values-part-3-1.c  c_p1__lab-conditions-and-conditional-executions-part-1-1.c  c_p1__lab-conditions-and-conditional-executions-part-2-1.c  c_p1__lab-conditions-and-conditional-executions-part-3-1.c
C_projects.d/c_lang_2nd-ed.d/Exercise1-13.d/: main.c
C_projects.d/c_lang_2nd-ed.d/blank_template.d/: CMakeLists.txt  main.c
C_projects.d/c_lang_2nd-ed.d/exercise1-10.f/: CMakeLists.txt
C_projects.d/c_lang_2nd-ed.d/exercise1-8.d/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  main.c
C_projects.d/c_lang_2nd-ed.d/hello_char.d/: CMakeCache.txt  Makefile  a.out  cmake_install.cmake  main.c
C_projects.d/compression/: CMakeLists.txt
C_projects.d/helloC/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  untitled  untitled.cbp
C_projects.d/paradigms/lecture3.d/short_into_double.d/: main.c
C_projects.d/paradigms/lecture3.d/short_pi_fn.d/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  myFunction.c
C_projects.d/tax_calc_for_AnBoz/: CMakeLists.txt  financial_calc.c  financial_calc.h
compression/: CMakeLists.txt  compression.out  file  main.c  readme.md
(+1 files in other folders)
