# CMakeList.txt : CMake project for financial_calc, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("financial_calc")

# Add source to this project's executable.
add_executable (financial_calc "financial_calc.c" "financial_calc.h")

# TODO: Add tests and install targets if needed.
